Added two new projects: Speed Test Logger Beam Path Simulation

--- a/templates/index.html
+++ b/templates/index.html
@@ -830,8 +830,17 @@
 
                                     <!-- Python Scripting -->
                                     <img class="img-fluid d-block mx-auto" src="static/assets/img/portfolio/h_code.jpg" alt="Code" />
-                                    <div>
+                                    <div style="padding-top: 75px;">
                                         <h2 class="text-uppercase" style="padding-bottom: 20px;">Python Scripting</h2>
+                                            <h3 class="text-uppercase">
+                                                Speed Test Logger
+                                                <a href="https://github.com/EikeHanel/speed_test_logger" target="_blank">
+                                                <i class="fas fa-external-link-alt link-icon"></i>
+                                                </a>
+                                            </h3>
+                                            <p class="item-intro text-muted">
+                                                This script runs periodic internet speed tests and logs the results to a CSV file.
+                                            </p>
                                            <h3 class="text-uppercase">
                                                 Unit Converter
                                                 <a href="https://github.com/EikeHanel/unit_converter" target="_blank">
@@ -863,9 +872,9 @@
                                     </div>
 
                                     <!-- Web Development -->
-
+                                    <div style="padding-top: 75px;">
                                     <h2 class="text-uppercase" style="padding-bottom: 20px;">Web Development</h2>
-                                    <div>
+
                                         <h3 class="text-uppercase">
                                             Cafe and Wi-Fi Website
                                             <a href="https://github.com/EikeHanel/Cafe-and-Wifi" target="_blank">
@@ -887,9 +896,19 @@
                                     </div>
 
                                     <!-- Graphical User Interface -->
-
                                     <div style="padding-top: 75px;">
-                                        <h2 class="text-uppercase" style="padding-bottom: 20px;">Graphical User Interface</h2>
+                                    <h2 class="text-uppercase" style="padding-top: 20px;">Graphical User Interface</h2>
+                                        <h3 class="text-uppercase">
+                                            Beam Path Simulator
+                                            <a href="https://github.com/EikeHanel/beam_path_sim" target="_blank">
+                                                <i class="fas fa-external-link-alt link-icon"></i>
+                                            </a>
+                                        </h3>
+                                        <p class="item-intro text-muted">
+                                            An interactive tool that visualizes the propagation
+                                            of light beams through optical systems using matrix optics.
+                                        </p>
+
 
                                         <h3 class="text-uppercase">
                                             Finance Tracker
@@ -897,7 +916,9 @@
                                             <i class="fas fa-external-link-alt link-icon"></i>
                                             </a>
                                         </h3>
-                                        <p class="item-intro text-muted">An application that can help you manage your finances.</p>
+                                        <p class="item-intro text-muted">
+                                            An application that can help you manage your finances.
+                                        </p>
 
                                         <h3 class="text-uppercase">
                                             Appointment Maker
