Fixed small styling error inside Codeing Projects - GUI

--- a/templates/index.html
+++ b/templates/index.html
@@ -897,7 +897,7 @@
 
                                     <!-- Graphical User Interface -->
                                     <div style="padding-top: 75px;">
-                                    <h2 class="text-uppercase" style="padding-top: 20px;">Graphical User Interface</h2>
+                                    <h2 class="text-uppercase" style="padding-bottom: 20px;">Graphical User Interface</h2>
                                         <h3 class="text-uppercase">
                                             Beam Path Simulator
                                             <a href="https://github.com/EikeHanel/beam_path_sim" target="_blank">
