Added: Coding Project - Novel Scraper to EPUB

--- a/templates/index.html
+++ b/templates/index.html
@@ -832,6 +832,15 @@
                                     <div style="padding-top: 75px;">
                                         <h2 class="text-uppercase" style="padding-bottom: 20px;">Python Scripting</h2>
                                             <h3 class="text-uppercase">
+                                                Novel Scraper to EPUB
+                                                <a href="https://github.com/EikeHanel/novel_scrape" target="_blank">
+                                                <i class="fas fa-external-link-alt link-icon"></i>
+                                                </a>
+                                            </h3>
+                                            <p class="item-intro text-muted">
+                                                A Python script that scrapes novels from Royal Road and converts them into EPUB files for offline reading.
+                                            </p>
+                                            <h3 class="text-uppercase">
                                                 Speed Test Logger
                                                 <a href="https://github.com/EikeHanel/speed_test_logger" target="_blank">
                                                 <i class="fas fa-external-link-alt link-icon"></i>
